--- a/brars.css
+++ b/brars.css
@@ -1,12 +1,154 @@
-.mobile-text 
-{
-    text-align: left !important;
+:root {
+    --brars-yellow: #edbe09;
 }
-  
-@media (max-device-width: 600px) 
-{
-    .mobile-text 
-    {
-        text-align: center !important;
+
+body {
+    /* background-color: #3a3c4a; */
+    background-color: #333;
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+::selection {
+    background: var(--brars-yellow);
+    color: black;
+}
+
+h1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    font-size: 2rem;
+    max-width: 40rem;
+    font-family: "Racing Sans One", sans-serif;
+    font-optical-sizing: auto;
+}
+
+p {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+    font-family: "Abel", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    max-width: 28rem;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--brars-yellow);
+    fill: var(--brars-yellow);
+    cursor: pointer;
+}
+
+.svgToWhite {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(316deg) brightness(106%) contrast(101%);
+}
+
+a:hover > svg {
+    filter: invert(91%) sepia(14%) saturate(4811%) hue-rotate(348deg) brightness(92%) contrast(103%);
+    /* filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%); */
+}
+
+svg {
+
+}
+
+image:hover {
+    fill: red;
+}
+
+.header {
+    margin-bottom: -0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+
+.logo {
+    width: 15rem;
+    margin: -1.25rem;
+}
+
+.navbar {
+    /* animation: animateGap 1s both; */
+    font-size: 1.5rem;
+    font-family: "Racing Sans One", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
+    color: #fff;
+    background-color: #000;
+}
+
+.album {
+    padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.polaroid {
+    min-width: 20%;
+    max-width: 9rem;
+    border: solid white 0.5rem;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+}
+
+.content {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+}
+
+.about {
+    animation: fadeInFromBelow 1s both 1s;
+}
+
+footer {
+    margin-top: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    background-color: #000;
+}
+
+.contact {
+    color: white;
+}
+
+.contact > p {
+    margin: 0;
+}
+
+@keyframes fadeInFromBelow {
+    from {
+        opacity: 0;
+        transform: translateY(1rem);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
