--- a/brars.css
+++ b/brars.css
@@ -3,8 +3,7 @@
 }
 
 body {
-    /* background-color: #3a3c4a; */
-    background-color: #333;
+    background-color: white;
     margin: 0;
     min-height: 100vh;
     display: flex;
@@ -17,23 +16,26 @@ body {
 }
 
 h1 {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    padding: 0.8rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
     text-align: center;
     font-size: 2rem;
+    font-optical-sizing: auto;
+    font-weight: 500;
     max-width: 40rem;
     font-family: "Racing Sans One", sans-serif;
-    font-optical-sizing: auto;
+    background-color: black;
 }
 
 p {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
     font-size: 1.2rem;
     font-family: "Abel", sans-serif;
     font-optical-sizing: auto;
     font-weight: 500;
     max-width: 28rem;
+    background-color: black;
+    padding: 1rem;
 }
 
 a {
@@ -53,15 +55,6 @@ a:hover {
 
 a:hover > svg {
     filter: invert(91%) sepia(14%) saturate(4811%) hue-rotate(348deg) brightness(92%) contrast(103%);
-    /* filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%); */
-}
-
-svg {
-
-}
-
-image:hover {
-    fill: red;
 }
 
 .header {
@@ -73,6 +66,7 @@ image:hover {
 }
 
 .logo {
+    z-index: 999;
     width: 15rem;
     margin: -1.25rem;
 }
@@ -94,21 +88,26 @@ image:hover {
 }
 
 .album {
-    padding: 1rem;
+    padding-top: 2rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
 .polaroid {
-    min-width: 20%;
-    max-width: 9rem;
+    margin: -1rem;
+    max-height: 9rem;
+    max-width: 40%;
+    flex: initial;
     border: solid white 0.5rem;
+    box-shadow: 0.5rem 0.5rem 2rem 0.5rem #00000044;
     animation-duration: 0.5s;
     animation-fill-mode: both;
+    z-index: 50;
 }
 
 .content {
+    padding-top: 2rem;
     padding-left: 2rem;
     padding-right: 2rem;
     margin-bottom: 2rem;
@@ -120,6 +119,35 @@ image:hover {
 
 .about {
     animation: fadeInFromBelow 1s both 1s;
+}
+
+.about > p {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.crew {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.crewMember {
+    width: 100%;
+    max-width: 40rem;
+    display: flex;
+    flex-direction: row;
+    height: 8rem;
+    background-color: black;
+    border: 0.3rem solid black;
+}
+
+.crewMember > p {
+    margin: 0;
+}
+
+.portrait {
+    height: 100%;
 }
 
 footer {
