--- a/global.css
+++ b/global.css
@@ -1,5 +1,5 @@
 :root {
-    --brars-yellow: #edbe09;
+    --brars-yellow: #ecab3e;   
 }
 
 body {
@@ -22,20 +22,28 @@ h1 {
     text-align: center;
     font-size: 2rem;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 400;
     max-width: 40rem;
     font-family: "Racing Sans One", sans-serif;
     background-color: black;
 }
 
+h2 {
+    margin: 0;
+    font-size: 2rem;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-family: "Racing Sans One", sans-serif;
+}
+
 p {
+    margin: 0;
     font-size: 1.2rem;
     font-family: "Abel", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 400;
     max-width: 28rem;
     background-color: black;
-    padding: 1rem;
 }
 
 a {
@@ -47,6 +55,12 @@ a:hover {
     color: var(--brars-yellow);
     fill: var(--brars-yellow);
     cursor: pointer;
+    transition: 0.1s;
+}
+
+.navbar > a:hover {
+    color: white;
+    transition: 0.1s;
 }
 
 .svgToWhite {
@@ -54,7 +68,12 @@ a:hover {
 }
 
 a:hover > svg {
-    filter: invert(91%) sepia(14%) saturate(4811%) hue-rotate(348deg) brightness(92%) contrast(103%);
+    filter: invert(78%) sepia(65%) saturate(719%) hue-rotate(330deg) brightness(99%) contrast(87%);
+    transition: 0.1s;
+}
+
+.brarsYellow {
+    color: var(--brars-yellow);
 }
 
 .header {
@@ -63,6 +82,17 @@ a:hover > svg {
     justify-content: center;
     align-items: center;
     background-color: white;
+
+    /* Background pattern for header */
+    background:
+    radial-gradient(black 3px, transparent 4px),
+    radial-gradient(black 3px, transparent 4px),
+    linear-gradient(#fff 4px, transparent 0),
+    linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
+    linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
+    #fff;
+    background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
+    background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
 }
 
 .logo {
@@ -72,7 +102,6 @@ a:hover > svg {
 }
 
 .navbar {
-    /* animation: animateGap 1s both; */
     font-size: 1.5rem;
     font-family: "Racing Sans One", sans-serif;
     font-optical-sizing: auto;
@@ -83,27 +112,14 @@ a:hover > svg {
     justify-content: center;
     align-items: center;
     gap: 2.5rem;
-    color: #fff;
-    background-color: #000;
+    color: black;
+    background-color: #ecab3e;
+    border-top: solid black 0.35rem;
+    border-bottom: solid black 0.35rem;
 }
 
-.album {
-    padding-top: 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.polaroid {
-    margin: -1rem;
-    max-height: 9rem;
-    max-width: 40%;
-    flex: initial;
-    border: solid white 0.5rem;
-    box-shadow: 0.5rem 0.5rem 2rem 0.5rem #00000044;
-    animation-duration: 0.5s;
-    animation-fill-mode: both;
-    z-index: 50;
+.navbar > a {
+    color: black;
 }
 
 .content {
@@ -117,46 +133,13 @@ a:hover > svg {
     color: #fff;
 }
 
-.about {
-    animation: fadeInFromBelow 1s both 1s;
-}
-
-.about > p {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.crew {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.crewMember {
-    width: 100%;
-    max-width: 40rem;
-    display: flex;
-    flex-direction: row;
-    height: 8rem;
-    background-color: black;
-    border: 0.3rem solid black;
-}
-
-.crewMember > p {
-    margin: 0;
-}
-
-.portrait {
-    height: 100%;
-}
-
 footer {
     margin-top: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 3.5rem;
     padding-top: 1rem;
     padding-bottom: 2rem;
     background-color: #000;
@@ -166,8 +149,11 @@ footer {
     color: white;
 }
 
-.contact > p {
-    margin: 0;
+.contactWay {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 @keyframes fadeInFromBelow {
