--- a/global.css
+++ b/global.css
@@ -101,8 +101,18 @@ a:hover > svg {
 
 .logo {
     z-index: 999;
-    width: 15rem;
-    margin: -1.25rem;
+    height: 12rem;
+    margin-top: 0.25rem;
+    margin-bottom: 1rem;
+    transition: 0.2s;
+}
+
+.logo:hover {
+    cursor: pointer;
+    height: 13rem;
+    margin-top: 0;
+    margin-bottom: 0.25rem;
+    transition: 0.2s;
 }
 
 .navbar {
