--- a/global.css
+++ b/global.css
@@ -87,6 +87,9 @@ a:hover > svg {
     align-items: center;
     background-color: white;
 
+    /* Prevent appearance of scrollbar to shift content to the left */
+    padding-left: calc(100vw - 100%);
+
     /* Background pattern for header */
     background:
     radial-gradient(black 3px, transparent 4px),
@@ -130,6 +133,9 @@ a:hover > svg {
     background-color: #ecab3e;
     border-top: solid black 0.35rem;
     border-bottom: solid black 0.35rem;
+
+    /* Prevent appearance of scrollbar to shift content to the left */
+    padding-left: calc(0.5rem + 100vw - 100%);
 }
 
 .navbar > a {
