--- a/crew.css
+++ b/crew.css
@@ -22,6 +22,16 @@
     background-color: transparent;
 }
 
+.crewMember:hover > h2 {
+    color: var(--brars-yellow);
+    transition: 0.1s;
+}
+
+.crewMember:hover > .portrait {
+    filter: contrast(110%) brightness(110%);
+    transition: 0.2s;
+}
+
 .portrait {
     height: 8rem;
     float: left;
