--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 .album {
     padding-top: 2rem;
+    margin: -1.25rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    gap: 1rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
