--- a/reviews.css
+++ b/reviews.css
@@ -1,14 +1,18 @@
-.reviews {
+.reviews > h1 {
     animation: fadeInFromBelow 1s;
-    background-image: url('images/villevallarodebaronen.JPG');
-    background-size: 100rem;
-    align-items: left;
 }
 
 .reviews > p {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     padding: 1rem;
-    text-align: left;
+    text-align: center;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
 }
 
+.quote {
+    margin-top: 0.75rem;
+    float: right;
+    font-style: italic;
+}
